crates/willikins-core/src/snapshots/willikins_core__value__tests__json_shape_known_list.snap
---
source: crates/willikins-core/src/value.rs
expression: value
---
{
  "type": "GitHubOrg",
  "list": true,
  "state": "known",
  "value": [
    "a",
    "b"
  ]
}
