crates/willikins-core/src/snapshots/willikins_core__value__tests__json_shape_known_non_secret.snap
---
source: crates/willikins-core/src/value.rs
expression: value
---
{
  "type": "GitHubOrg",
  "list": false,
  "state": "known",
  "value": "lightless-labs"
}
