crates/willikins-core/src/snapshots/willikins_core__value__tests__json_shape_known_secret.snap
---
source: crates/willikins-core/src/value.rs
expression: value
---
{
  "type": "DopplerServiceToken",
  "list": false,
  "state": "known",
  "value": "[REDACTED DopplerServiceToken]",
  "redacted": true
}
