crates/willikins-core/src/snapshots/willikins_core__value__tests__json_shape_unknown.snap
---
source: crates/willikins-core/src/value.rs
expression: value
---
{
  "type": "DopplerServiceToken",
  "list": false,
  "state": "unknown"
}
